Fix trunk build bustage caused by XPConnect changes (bug 453491), partial r=dbo